fixes auto-completion with options